# carrot-lib-rs

./: .gitignore  Cargo.toml  README.md
carrot-cv-utils/src/image/: rgb_image.rs
carrot-cv-utils/src/image/rgb_image/: draw.rs
carrot-cv-utils/src/util/: benchmark.rs
carrot_cv_utils/: Cargo.toml
carrot_image_utils/: Cargo.toml  README.md
carrot_image_utils/src/: gray_image.rs  lib.rs  rgb_image.rs
carrot_image_utils/src/gray_image/: gray_to_binary.rs
carrot_image_utils/src/image/convertor/: gray_to_binary.rs
carrot_image_utils/src/rgb_image/: rgb_to_binary.rs  rgb_to_gray.rs  rgb_to_rgb.rs
carrot_utils/: Cargo.toml  README.md
carrot_utils/src/: benchmark.rs  command.rs  lib.rs  logger.rs  path.rs  string.rs
src/: debug.rs  image.rs  image_util.rs  lib.rs  logger.rs
src/convertor/: gray_to_binary.rs  gray_to_rgb.rs  rgb_to_binary.rs  rgb_to_gray.rs
src/image/: gray_image.rs  rgb_image.rs
src/image/convertor/: gray_to_rgb.rs  rgb_to_binary.rs
src/image/rgb_image/: debug.rs  draw.rs
src/util/: benchmark.rs  file.rs  logger.rs  path.rs
