[package]
name = "realtime_cv_lib"
version = "0.1.0"
description = "Real-time Image processing util library"
keywords = ["image", "vision", "real-time"]
authors = ["scepter914 <st14.828soccer@gmail.com>"]
repository = "https://github.com/scepter914/realtime-cv-lib-rs"
# documentation = "https://docs.rs/realtime_cv_lib"
license = "MIT"
readme = "README.md"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
image = "0.23.14"
imageproc = "0.22.0"
