[package]
name = "carrot_cv_utils"
version = "0.1.0"
description = "CV util library"
keywords = ["image", "vision", "real-time"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/carrot_cv_utils"
# documentation = "https://docs.rs/carrot_cv_utils"
license = "MIT"
readme = "README.md"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
image = "0.23.14"
imageproc = "0.22.0"
