[package]
name = "carrot_image_utils"
version = "0.1.0"
description = "Utils library for Image processing"
keywords = ["image", "vision"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/carrot-utils"
documentation = "https://docs.rs/carrot_image_utils"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
image = "0.23.14"
imageproc = "0.22.0"
log = "0.4.0"
simplelog = "0.10.0"
num = "0.4"
