[package]
name = "carrot_image_utils"
version = "0.1.9"
edition = "2021"

license = "MIT"
description = "Util library for image processing"
authors = ["scepter914 <scepter914@gmail.com>"]

readme = "README.md"
documentation = "https://docs.rs/carrot_image_utils"
repository = "https://github.com/scepter914/carrot-lib-rs"
categories = ["Computer-vision"]
keywords = ["image", "vision"]

exclude = ["data/*"]

[dependencies]
image = "0.24.3"
imageproc = "0.23.0"
num = "0.4.1"
