[package]
name = "carrot-utils"
version = "0.1.0"
description = "Utils library"
edition = "2021"
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/carrot-utils"
documentation = "https://docs.rs/carrot_utils"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
