[package]
name = "carrot_utils"
version = "0.1.4"
description = "Utils library"
edition = "2021"
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/carrot-utils-rs"
documentation = "https://docs.rs/carrot_utils"
license = "MIT"
readme = "README.md"
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
log = "0.4"
simplelog = "0.12.0"
colored = "2.1.0"
