[package]
name = "carrot_utils"
version = "0.1.7"
edition = "2021"

license = "MIT"
description = "Utils library"
authors = ["scepter914 <scepter914@gmail.com>"]

readme = "README.md"
repository = "https://github.com/scepter914/carrot-utils-rs"
documentation = "https://docs.rs/carrot_utils"
exclude = ["data/*"]

[dependencies]
chrono = "0.4"
log = "0.4"
simplelog = "0.12.0"
colored = "2.1.0"
